# mono2d_trash_detection

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: ppyoloworkconfig.json
src/: main.cpp
